edicao de informacoes do perfil

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,4 +1,6 @@
-﻿
+﻿@{
+    ViewData["Title"] = "Home";
+}
 
 <main class="flex-grow p-4 sm:p-6 lg:p-8 max-w-[1400px] mx-auto w-full relative">
         
