fazendo os treinos aaaaaa

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -96,7 +96,7 @@
                     </a>
 
                     <a asp-controller="Workout"
-                    asp-action="Privacy"
+                    asp-action="Index"
                     class="@(currentController == "Workout" && currentAction == "Index"
                         ? "text-emerald-400 font-bold"
                         : "hover:text-white transition")">
